Tidy-up after 1st successful build